padding bug squish

--- a/client/views/schedule/schedule.less
+++ b/client/views/schedule/schedule.less
@@ -24,8 +24,9 @@
     display: none;
   }
   .fc-event-title {
-    padding: 0.5rem;
+    padding: 0.2rem 0.5rem;
     font-size: 0.8rem;
+    line-height: 1.2rem;
 
     &:first-line {
       font-weight: bold;
